--- a/AdsPower.LocalApi/AdsPower.LocalApi.csproj
+++ b/AdsPower.LocalApi/AdsPower.LocalApi.csproj
@@ -6,5 +6,10 @@
         <Nullable>enable</Nullable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
-
+    
+    <PropertyGroup>
+        <Description>Unofficial async .NET library for the AdsPower Local API </Description>
+        <PackageId>AdsPower.LocalApi</PackageId>
+        <RepositoryUrl>https://github.com/daraber/adspower-dotnet</RepositoryUrl>
+    </PropertyGroup>
 </Project>
